fix overflow

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,10 +1,11 @@
 .container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  
+  padding: 1rem 0;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
