--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -64,7 +64,7 @@ body {
   background-color: var(--bg-color-darker);
 
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 /* BUTTONS STYLING */
